--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
         <div class="form">
             <p>I'm delighted to be able to chat with you. To do this, please complete the form below by providing the
                 neccessary information. I undertake to answer you as soon as possible in order to provide you with the
-                information you need.</p>
-            <form enctype="text/plain" method="POST" action="https://formsubmit.co/koffilevis21@gmail.com">
+                information your need.</p>
+            <form method="POST" action="https://formsubmit.co/el/fesama">
                 <input required class="in-text"  type="text" placeholder="Your name" name="name">
                 <input required class="in-text" type="email" placeholder="Your email" name="email" >
                 <input class="in-text" type="text" placeholder="object" name="object" id="">
