--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
         <div class="Me">
-            <img src="" alt="image">
+            <img src="image/levis1.png" alt="image">
         </div>
 
          <div class="scroll-down">
@@ -179,7 +179,7 @@
             <p>I'm delighted to be able to chat with you. To do this, please complete the form below by providing the
                 neccessary information. I undertake to answer you as soon as possible in order to provide you with the
                 information your need.</p>
-            <form method="POST" action="https://formsubmit.co/el/fesama">
+            <form method="POST" action="https://formsubmit.co/koffilevis21@gmail.com">
                 <input required class="in-text"  type="text" placeholder="Your name" name="name">
                 <input required class="in-text" type="email" placeholder="Your email" name="email" >
                 <input class="in-text" type="text" placeholder="object" name="object" id="">
