--- a/index.html
+++ b/index.html
@@ -179,10 +179,10 @@
             <p>I'm delighted to be able to chat with you. To do this, please complete the form below by providing the
                 neccessary information. I undertake to answer you as soon as possible in order to provide you with the
                 information your need.</p>
-            <form method="POST" action="https://formsubmit.co/4a77d5c0456aeacbbb7502ca31e96401">
+            <form method="POST" action="https://formsubmit.co/koffilevis21@gmail.com">
                 <input required class="in-text"  type="text" placeholder="Your name" name="name">
                 <input required class="in-text" type="email" placeholder="Your email" name="email" >
-                <input class="in-text" type="text" placeholder="object" name="object" id="">
+                <input class="in-text" type="text" placeholder="object" name="_subject" id="">
                 <textarea required placeholder="Write your message here ... " name="message" id="" cols="30"
                     rows="12"></textarea>
                 <input id="submit" type="submit" value="Send message">
